assets/custom.css
/* ... */
.banner h3 {
  font-weight: 400;
}

.banner p {
  margin: auto;
}

#scroll-indicator {
  display: flex;
  flex-direction: row;
  justify-content: start;
  align-items: center;
  font-weight: 700;
  gap: 0.5rem;
  transform: rotate(90deg);
  position: fixed;
  bottom: 30%;
  left: 5%
}

#scroll-indicator.hidden {
  display: none;
}

@media only screen and (max-width: 1024px) {
  .banner .title {
    text-align: center;
  }
}

@media only screen and (max-width: 768px) {
  .banner > div {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 1.5rem;
    max-width: 100%;
    margin: auto;
  }

  .banner .logo {
    height: 3rem;
  }

  .banner .title {
    text-align: left;
  }

  #scroll-indicator {
    bottom: 10%
  }

  @media only screen and (max-height: 700px) {
    #scroll-indicator {
      transform: translateX(-1.5rem) rotate(90deg);
      left: 0;
    }
  }
}

/* CSS for Index Page  */

.cards {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: stretch;
  gap: 2.75rem;
  overflow-x: scroll;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  width: 30%;
  min-width: 14rem;
  padding: 2rem;
  box-shadow: 0 8px 30px 0 rgba(0, 0, 0, 0.10);
}

.card img {
  width: 4rem;
  height: 4rem;
  border-radius: 50%;
  margin-bottom: 2.5rem;
}

.card h4 {
  width: 100%;
  margin-bottom: 1rem;
}

@media only screen and (max-width: 1024px) {
  .card {
    padding: 1.5rem;
  }
}

@media only screen and (max-width: 768px) {

  .card img {
    display: none;
  }
}

.column-2 {
  display: grid;
  grid-template-columns: repeat(2, minmax(0, 1fr));
  grid-template-rows: 1fr;
  grid-template-areas: "content illustration";
  gap: 15%;
}

.column-2.reverse {
  grid-template-areas: "illustration content";
}

.column-2 .content {
  grid-area: content;
  display: flex;
  flex-direction: column;
  gap: 3.25rem;
}

.column-2 .content h2 {
  margin-bottom: 1.5rem;
}
.column-2 .content h3 {
  margin-bottom: 1.5rem;
}

.column-2 .illustration {
  overflow: hidden;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center top;
  grid-area: illustration
}

.column-2 .image-cover {
  overflow: hidden;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  grid-area: illustration
}

@media only screen and (max-width: 1024px) {
  .column-2 {
    gap: 5%;
  }
}

@media only screen and (max-width: 768px) {

  .column-2,
  .column-2.reverse {
    display: grid;
    grid-template-areas: "illustration" "content";
    grid-template-columns: 1fr;
    grid-template-rows: 15.75rem 1fr;
    gap: 2rem;
  }

  .column-2 .content {
    gap: 2.5rem;
  }

  .column-2 .content h2 {
    margin-bottom: 1rem;
  }

  .column-2 .content h3 {
    margin-bottom: 1.5rem;
  }

  .column-2 .illustration {
    background-position: center bottom;
  }

  .column-2 .image-cover {
    background-size: contain;
  }

}

.swiper {
  width: 100%;
}

.swiper-wrapper {
  -webkit-transition-timing-function: linear !important;
  -o-transition-timing-function: linear !important;
  transition-timing-function: linear !important;
}

/* CSS for Index Page - certifications */

#certifications.swiper {
  overflow: visible;
}

#certifications .certification {
  height: 9.5rem;
  width: 18rem;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  gap: 2.375rem
}

#certifications .certification img {
  -webkit-filter: grayscale();
  filter: grayscale();
  display: block;
  object-fit: contain;
  height: 3.75rem;
}

#certifications .certification span {
  text-align: center;
}

@media only screen and (max-width: 768px) {
  #certifications .certification {
    height: 6.75rem;
    width: 10rem;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    gap: 1.5rem
  }

  #certifications .certification img {
    height: 3.5rem;
  }
}

/* CSS for Index Page - trusted-by */

#trusted-by {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  gap: 7rem;
}

#trusted-by .title span {
  display: flex;
  padding: 0.375rem 1.25rem;
  justify-content: center;
  align-items: center;
  border-radius: 1.25rem;
  color: #CACACF;
  border: 1px solid #CACACF;
}

#trusted-by .swiper {
  overflow: visible;
}


#trusted-by #brands .brand {
  height: 4rem;
  display: inline-block;
}

#trusted-by .brand img {
  -webkit-filter: grayscale();
  filter: grayscale();
  display: block;
  width: 100%;
  height: 100%;
  object-fit: contain;
}

@media only screen and (max-width: 768px) {

  #trusted-by {
    gap: 3.75rem;
  }

  #trusted-by #brands .brand {
    height: 2.875rem;
  }
}

/* CSS for Index Page - skills - specialities */

#skills {
  background-color: #F8F8F8;
}

#skills h2 {
  margin-bottom: 5.25rem;
}

#skills > div, #skills > div > div {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 3rem;
}

#skills h4 {
  margin-bottom: 2rem;
}

#skills ul {
  padding-left: 1rem;
}


@media only screen and (max-width: 768px) {

  #skills > div, #skills > div > div {
    display: grid;
    grid-template-columns: 1fr;
    gap: 2rem;
  }

  #skills h2 {
    margin-bottom: 2.875rem;
  }

  #skills h4 {
    margin-bottom: 1rem;
  }
}

/* CSS for Index Page - blog-preview */
#blog-preview h2 {
  margin-bottom: 0.5rem;
}

#blog-preview .posts-preview {
  margin: 4.25rem 0;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: space-between;
  flex-wrap: nowrap;
  overflow: scroll;
  gap: 1rem;
  padding-bottom: 0.5rem;
}

#blog-preview .post-preview {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  min-width: 17.75rem;
  width: 17.75rem;
  gap: 2rem;
}

#blog-preview .post-preview img {
  width: 100%;
  object-fit: contain;
}
/* ... */

